Fix spacing on .horizontal-rule--spacer background

--- a/src/css/blocks/_form.css
+++ b/src/css/blocks/_form.css
@@ -18,9 +18,9 @@
       content: '';
       position: absolute;
       left: -4rem;
-      top: -1rem;
-      right: -4rem;
-      bottom: -1rem;
+      top: -1.5rem;
+      right: -3rem;
+      bottom: 0;
       background: var(--x-light-gray);
       z-index: -1;
     }
