--- a/src/style.css
+++ b/src/style.css
@@ -1457,9 +1457,9 @@ a:active, a:hover{
   content:'';
   position:absolute;
   left:-4rem;
-  top:-1rem;
-  right:-4rem;
-  bottom:-1rem;
+  top:-1.5rem;
+  right:-3rem;
+  bottom:0;
   background:#f9f9f9;
   z-index:-1;
 }
